# omESP

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  setup.py  test_box.csm  test_box.egads  test_cyl.egads
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/find/: FindESP.cmake
include/omESP/: omESP.hpp
omESP/: __init__.py  omESP.py
source/: omESP.cpp
test/: CMakeLists.txt
test/source/: omESP_test.cpp
tests/unit_tests/: test_omesp.py
tests/unit_tests/data/: test_box_refined.egads  test_cyl.csm  test_cyl.egads
